Added commented version of SASEGASAReunificator #839
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3451 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="ProbabilisticQualityComparator.cs" />
     <Compile Include="ResultsCollector.cs" />
+    <Compile Include="SASEGASAReunificator.cs" />
     <Compile Include="SquareRootDiscreteDoubleValueModifier.cs" />
     <Compile Include="DiscreteDoubleValueModifier.cs" />
     <Compile Include="ExponentialDiscreteDoubleValueModifier.cs" />
