--- a/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -90,11 +90,17 @@
     <Compile Include="DataFormatException.cs" />
     <Compile Include="Dataset.cs" />
     <Compile Include="Evaluators\SimpleEvaluator.cs" />
+    <Compile Include="Evaluators\SimpleMeanAbsolutePercentageErrorEvaluator.cs" />
+    <Compile Include="Evaluators\SimpleMeanAbsolutePercentageOfRangeErrorEvaluator.cs" />
     <Compile Include="Evaluators\SimpleMSEEvaluator.cs" />
+    <Compile Include="Evaluators\SimpleNMSEEvaluator.cs" />
+    <Compile Include="Evaluators\SimpleRSquaredEvaluator.cs" />
+    <Compile Include="Evaluators\SimpleVarianceAccountedForEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsDataAnalysisPlugin.cs" />
     <Compile Include="Interfaces\IModel.cs" />
     <Compile Include="MatrixExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statistics.cs" />
     <Compile Include="Symbolic\ArithmeticExpressionGrammar.cs" />
     <Compile Include="Symbolic\SimpleArithmeticExpressionEvaluator.cs" />
     <Compile Include="Symbolic\SymbolicSimplifier.cs" />
