added first draft of SASEGASA #839
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3479 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm/3.3/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm/3.3/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm-3.3.csproj
@@ -79,9 +79,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SASEGASA.cs" />
+    <Compile Include="SASEGASAMainLoop.cs" />
     <Compile Include="HeuristicLabAlgorithmsOffspringSelectionGeneticAlgorithmPlugin.cs" />
-    <Compile Include="OffspringSelectionIslandGeneticAlgorithm.cs" />
-    <Compile Include="OffspringSelectionIslandGeneticAlgorithmMainLoop.cs" />
+    <Compile Include="IslandOffspringSelectionGeneticAlgorithm.cs" />
+    <Compile Include="IslandOffspringSelectionGeneticAlgorithmMainLoop.cs" />
     <Compile Include="OffspringSelectionGeneticAlgorithm.cs" />
     <Compile Include="OffspringSelectionGeneticAlgorithmMainLoop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
