Worked on the refactoring of saving and loading items (#990)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3483 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Collections\ScopeList.cs" />
     <Compile Include="Collections\ValueParameterCollection.cs" />
     <Compile Include="Collections\VariableCollection.cs" />
+    <Compile Include="PersistenceContentManager.cs" />
     <Compile Include="Interfaces\IKeyedItemCollection.cs" />
     <Compile Include="Interfaces\IItemList.cs" />
     <Compile Include="Interfaces\IItemSet.cs" />
