--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -97,6 +97,9 @@
             <setting name="UpdateLocationAdministrationAddress" serializeAs="String">
                 <value>http://servdev.heuristiclab.com/Deployment-3.3/Admin.svc</value>
             </setting>
+            <setting name="ShowPluginUploadControls" serializeAs="String">
+                <value>True</value>
+            </setting>
         </HeuristicLab.PluginInfrastructure.Properties.Settings>
     </userSettings>
 </configuration>
