--- a/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -184,6 +184,19 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Documents\ES_Griewank.hl" />
+    <None Include="Documents\Images\New.png" />
+    <None Include="Documents\Images\Open.png" />
+    <None Include="Documents\Images\Pause.png" />
+    <None Include="Documents\Images\Play.png" />
+    <None Include="Documents\Images\Restart.png" />
+    <None Include="Documents\Images\Stop.png" />
+    <EmbeddedResource Include="Documents\IslandGA_TSP.hl" />
+    <EmbeddedResource Include="Documents\LS_OneMax.hl" />
+    <EmbeddedResource Include="Documents\SA_Rastrigin.hl" />
+    <EmbeddedResource Include="Documents\TS_TSP.hl" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
