--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -98,7 +98,7 @@
                 <value>http://servdev.heuristiclab.com/Deployment-3.3/Admin.svc</value>
             </setting>
             <setting name="ShowPluginUploadControls" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </HeuristicLab.PluginInfrastructure.Properties.Settings>
     </userSettings>
