Added a checked item collection and a view for it (which is basically the same file as `ItemCollectionView`). #992 (CheckedItemList and CheckedItemCollection is necessary)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3558 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Attributes\ItemAttribute.cs" />
     <Compile Include="Attributes\CreatableAttribute.cs" />
     <None Include="HeuristicLabCorePlugin.cs.frame" />
+    <Compile Include="Collections\CheckedItemCollection.cs" />
     <Compile Include="Collections\ReadOnlyItemDictionary.cs" />
     <Compile Include="Collections\ItemDictionary.cs" />
     <Compile Include="Collections\ReadOnlyKeyedItemCollection.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="Collections\ScopeList.cs" />
     <Compile Include="Collections\ValueParameterCollection.cs" />
     <Compile Include="Collections\VariableCollection.cs" />
+    <Compile Include="Interfaces\ICheckedItemCollection.cs" />
     <Compile Include="PersistenceContentManager.cs" />
     <Compile Include="Interfaces\IKeyedItemCollection.cs" />
     <Compile Include="Interfaces\IItemList.cs" />
