added Sidebar class and adapted Clipboard and !OperatorSidebar (ticket #972)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3571 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.WindowsForms/3.3/HeuristicLab.MainForm.WindowsForms-3.3.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.3/HeuristicLab.MainForm.WindowsForms-3.3.csproj
@@ -111,6 +111,12 @@
     <Compile Include="DockingMainForm.Designer.cs">
       <DependentUpon>DockingMainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sidebar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Sidebar.Designer.cs">
+      <DependentUpon>Sidebar.cs</DependentUpon>
+    </Compile>
     <Compile Include="DocumentForm.cs">
       <SubType>Form</SubType>
     </Compile>
