added !ViewHostPanel to !MainForm.!WindowsForms (ticket #993)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3572 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.WindowsForms/3.3/HeuristicLab.MainForm.WindowsForms-3.3.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.3/HeuristicLab.MainForm.WindowsForms-3.3.csproj
@@ -163,6 +163,12 @@
     <Compile Include="ViewHost.Designer.cs">
       <DependentUpon>ViewHost.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewHostPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ViewHostPanel.Designer.cs">
+      <DependentUpon>ViewHostPanel.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
